@@ -77,6 +77,7 @@
     <property name="installer.api.dir" value="${installer.build.dir}/api"/>
     <property name="installer.treeview.dir" value="${installer.build.dir}/treeview"/>
     <property name="installer.sourceview.dir" value="${installer.build.dir}/sourceview"/>
+    <property name="installer.win.dir" value="${installer.build.dir}/win"/>
     <property name="installer.build.src" value="${installer.build.dir}/src"/>
     <property name="installer.build.dest" value="${installer.build.dir}/build"/>
     <property name="install.props" value="${installer.build.dest}/installer/install.props"/>
@@ -97,7 +98,7 @@
     <property name="ostask.unix-script.label" value="Install shortcut in:"/>
     <property name="ostask.unix-man.label" value="Install manual page in:"/>
     <!--<property name="ostask.unix-man.manpage" value="jsxe.1"/>-->
-    <property name="comp.count" value="4"/>
+    <property name="comp.count" value="5"/>
     
     <property name="comp.0.name" value="jsXe XML Editor"/>
     <!-- size values are set by the filesize task in the
@@ -130,6 +131,16 @@
     <property name="comp.3.real-size" value="6073"/>-->
     <property name="comp.3.fileset" value="jsxe-api"/>
     <property name="installer.build.api.tar" value="${installer.build.dest}/installer/${comp.3.fileset}.tar.bz2"/>
+    
+    <property name="comp.4.name" value="Windows Integration (highly recommended)"/>
+    <!-- size values are set by the filesize task in the
+         build-installer task -->
+    <!--<property name="comp.4.disk-size" value="7084"/>
+    <property name="comp.4.real-size" value="6073"/>-->
+    <property name="comp.4.fileset" value="jsxe-win"/>
+    <property name="comp.4.os" value="Windows"/>
+    <property name="installer.build.win.tar" value="${installer.build.dest}/installer/${comp.4.fileset}.tar.bz2"/>
+    
     <!-- }}} -->
     <!-- {{{ java build properties -->
     <property name="javac.debug" value="on"/>
@@ -449,27 +460,6 @@
       </fileset>
     </copy>
     
-    <!-- copy the lib directory so that the jsXe.exe can be run
-         from the build dir -->
-    <mkdir dir="${build.dir}/lib"/>
-    <copy todir="${build.dir}/lib">
-      <fileset dir="${build.lib}">
-        <include name="**/*"/>
-      </fileset>
-    </copy>
-    
-    <!-- create the windows exe -->
-    <taskdef name="launch4j"
-      classname="net.sf.launch4j.ant.Launch4jTask"
-      classpath="${launch4j.classpath}"/>
-    
-    <launch4j configFile="${launch4j.config}"
-              outfile="${launch4j.jsxe.exe}"
-              jarPath="${launch4j.jsxe.jar}"
-              />
-    
-    <copy file="${jsxe.exe}" todir="${installer.program.dir}" />
-    
     <!-- create the tar.bz2 for the installer -->
     <tar basedir="${installer.program.dir}" includes="**/*" tarfile="${installer.build.dir}/${app.name}-${app_version}-program.tar"/>
     <bzip2 src="${installer.build.dir}/${app.name}-${app_version}-program.tar" destfile="${installer.build.program.tar}"/>
@@ -561,6 +551,47 @@
     
     <!-- }}} -->
     
+    <!-- {{{ create the win tar.bz2 file -->
+    
+    <!-- copy the lib directory so that the jsXe.exe can be run
+         from the build dir -->
+    <mkdir dir="${build.dir}/lib"/>
+    <copy todir="${build.dir}/lib">
+      <fileset dir="${build.lib}">
+        <include name="**/*"/>
+      </fileset>
+    </copy>
+    
+    <!-- create the windows exe -->
+    <taskdef name="launch4j"
+      classname="net.sf.launch4j.ant.Launch4jTask"
+      classpath="${launch4j.classpath}"/>
+    
+    <launch4j configFile="${launch4j.config}"
+              outfile="${launch4j.jsxe.exe}"
+              jarPath="${launch4j.jsxe.jar}"
+              />
+    
+    <mkdir dir="${installer.win.dir}"/>
+    <copy file="${jsxe.exe}" todir="${installer.win.dir}" />
+    
+    <tar basedir="${installer.win.dir}" includes="**/*" tarfile="${installer.build.dir}/${app.name}-${app_version}-win.tar"/>
+    <bzip2 src="${installer.build.dir}/${app.name}-${app_version}-win.tar" destfile="${installer.build.win.tar}"/>
+    <delete file="${installer.build.dir}/${app.name}-${app_version}-win.tar"/>
+    
+    <!-- find the file size of the files on disk and compressed files -->
+    <filesize property="comp.4.disk-size">
+      <fileset dir="${installer.win.dir}">
+        <include name="**/*"/>
+      </fileset>
+    </filesize>
+    
+    <filesize property="comp.4.real-size">
+      <fileset file="${installer.build.win.tar}"/>
+    </filesize>
+    
+    <!-- }}} -->
+    
     <!-- {{{ create the install.props file -->
     <propertyfile comment="${app.name}&apos;s installer properties" file="${install.props}">
       <entry key="app.name" value="${app.name}"/>
@@ -593,6 +624,12 @@
       <entry key="comp.3.disk-size" value="${comp.3.disk-size}"/>
       <entry key="comp.3.real-size" value="${comp.3.real-size}"/>
       <entry key="comp.3.fileset" value="${comp.3.fileset}"/>
+      
+      <entry key="comp.4.name" value="${comp.4.name}"/>
+      <entry key="comp.4.disk-size" value="${comp.4.disk-size}"/>
+      <entry key="comp.4.real-size" value="${comp.4.real-size}"/>
+      <entry key="comp.4.fileset" value="${comp.4.fileset}"/>
+      <entry key="comp.4.os" value="${comp.4.os}"/>
     </propertyfile>
     <!-- }}} -->
     
