@@ -3,6 +3,8 @@
     * Added support for running jsXe in a wrapped exe using launch4j.
     * Added an installer for jsXe. The installer can be packaged in an exe for
       easy use by windows users.
+    * Moved the windows integration into it's own component in the installer so
+      that it won't be installed on systems other than Windows.
 
 08/09/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
